--- a/src/features/DisplayControls/Diagnosis/styles/DiagnosisExpandableRow.scss
+++ b/src/features/DisplayControls/Diagnosis/styles/DiagnosisExpandableRow.scss
@@ -3,9 +3,11 @@
 }
 .notes-content {
   padding-top: 10px;
+  color: #161616;
 }
 
 .notes-provider-details {
   padding-top: 10px;
   padding-bottom: 10px;
+  color: #525252;
 }
